@@ -1,3 +1,9 @@
+Fri Feb 15 15:18:51 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (md_assemble): Support 32bit address prefix.
+	(i386_displacement): Likewise.
+	(i386_index_check): Accept 32bit addressing in 64bit mode.
+
 2002-02-15  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* NEWS: Mention support for MMIX.
